--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ nav {
 }
 
 #navId li{
-	margin-right : 5vw;
+	margin-right : 2vw;
 	list-style : none;
 }
 
@@ -39,3 +39,15 @@ a:focus{}
 a:hover{}
 
 a:active{}
+
+@media only screen and (max-width: 600px) {
+	li {
+	  padding: 0;
+	  padding-right: 1vw;
+	}
+
+	#navId{
+		display : flex;
+		justify-content : center;
+	}
+}
