adding/testing fonts

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,35 @@
+@font-face {
+  font-family: 'norseregular';
+  src: url('../fonts/norse-webfont.woff2') format('woff2'),
+       url('../fonts/norse-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'norsebold';
+  src: url('../fonts/norse-bold-webfont.woff2') format('woff2'),
+      url('../fonts/norse-bold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'viking-normalregular';
+  src: url('../fonts/viking-normal-webfont.woff2') format('woff2'),
+       url('../fonts/viking-normal-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'viking_hellregular';
+  src: url('../fonts/viking_hell-webfont.woff2') format('woff2'),
+       url('../fonts/viking_hell-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
 html {
   padding: 0;
   margin: 0;
@@ -18,11 +50,19 @@ nav {
   list-style: none;
 }
 
+h1{  
+  font-family: 'viking-normalregular', 'Arial', 'Sans-serif';
+}
+
+p{
+  font-family: 'viking-normalregular', 'Arial', 'Sans-serif';
+}
 #intro_text{
 	max-width: 80vw;
 	align-content: center;
 	margin-left: auto;
-	margin-right: auto;
+  margin-right: auto;
+  font-family: 'viking_hellregular', 'Arial', 'Sans-serif';
 }
 
 li {
