--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@
 html {
   padding: 0;
   margin: 0;
-  background: #8C8564;
+  background: #8C6D46;
   color: #ffffff;
 }
 
@@ -41,6 +41,7 @@ header{
   background-image: url("../images/back_vik.jpg");
   background-size: 100%;
   height: 30vh;
+  position: relative;
 }
 
 nav {
@@ -55,21 +56,21 @@ nav {
 }
 
 #navId li {
-  margin-right: 2vw;
   list-style: none;
   font-family: 'nordica_pnordicaclassicrgcond', 'Sans-serif', 'Arial';
 }
 
 h1{
-  background: #343D59;
   font-family: 'viking-normalregular', 'Arial', 'Sans-serif';
+  position: absolute;
+  bottom: -8vh;
 }
 
 h2{
   font-family: 'viking-normalregular', 'Arial', 'Sans-serif';
 }
 
-p{ 
+p{
   font-family: 'nordica_plnordicaclassicrgext', 'Sans-serif', 'Arial';
 }
 
@@ -78,6 +79,7 @@ p{
 	align-content: center;
 	margin-left: auto;
   margin-right: auto;
+  margin-top: 4vw; 
 }
 
 li {
@@ -90,6 +92,16 @@ li {
 a {
   text-decoration: none;
   color:#ffffff;;
+}
+
+#main_intro{
+  
+}
+
+.historicalParagraph{
+  border-width: 1vw;
+  border-style: solid;
+  border-color: #59332A;
 }
 
 a:link {
