fixed hamburger-menu on main page

--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,20 @@ header {
 }
 
 nav {
-  height: 10vh;
-  width: 98vw;
+  height: 20%;
+  width: 100%;
+}
+
+details {
+  font-family: "nordica_pnordicaclassicrgcond", "Sans-serif", "Arial";
+}
+
+details > summary::-webkit-details-marker {
+  display: none;
+}
+
+.countries {
+  margin-left: 2em;
 }
 
 #navId {
@@ -114,19 +126,26 @@ a:active {
 }
 
 @media only screen and (max-width: 600px) {
-  li {
-    padding: 0;
-    padding-right: 1vw;
-  }
-
   #navId {
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
     margin-top: 0;
     padding-top: 2vh;
     padding-left: 0;
     background-color: rgba(0, 0, 0, 0.4);
     width: 100%;
+  }
+
+  #aboutUs {
+    margin-left: auto;
+  }
+
+  li {
+    padding: 0.5em;
+  }
+
+  #unicodeLi {
+    padding: 0.3em;
   }
 
   #h1Top {
@@ -150,9 +169,6 @@ a:active {
     padding: 0;
   }
 
-  li {
-    justify-content: space-between;
-  }
   h2 {
     align-self: center;
     text-align: center;
