--- a/css/about_us.css
+++ b/css/about_us.css
@@ -1,112 +1,111 @@
 @font-face {
-    font-family: 'viking-normalregular';
-    src: url('../fonts/viking-normal-webfont.woff2') format('woff2'),
-         url('../fonts/viking-normal-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: "viking-normalregular";
+  src: url("../fonts/viking-normal-webfont.woff2") format("woff2"),
+    url("../fonts/viking-normal-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
-  
+
 @font-face {
-    font-family: 'nordica_plnordicaclassicrgext';
-    src: url('../fonts/nordicaclassicrgext-webfont.woff2') format('woff2'),
-         url('../fonts/nordicaclassicrgext-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: "nordica_plnordicaclassicrgext";
+  src: url("../fonts/nordicaclassicrgext-webfont.woff2") format("woff2"),
+    url("../fonts/nordicaclassicrgext-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
-  
-  @font-face {
-    font-family: 'nordica_pnordicaclassicrgcond';
-    src: url('../fonts/nordicaclassicrgcond-webfont.woff2') format('woff2'),
-         url('../fonts/nordicaclassicrgcond-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-  
+
+@font-face {
+  font-family: "nordica_pnordicaclassicrgcond";
+  src: url("../fonts/nordicaclassicrgcond-webfont.woff2") format("woff2"),
+    url("../fonts/nordicaclassicrgcond-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
-  
-html{
-    padding: 0;
-    margin: 0;
-    background: #8C6D46;
-    color: #ffffff;
+
+html {
+  padding: 0;
+  margin: 0;
+  background: #8c6d46;
+  color: #ffffff;
 }
-  
-body{
-    padding: 0;
-    margin: 0;
+
+body {
+  padding: 0;
+  margin: 0;
 }
-  
-header{
-    background-image: url("../images/back_vik.jpg");
-    background-size: 100%;
-    height: 30vh;
-    position: relative;
+
+header {
+  background-image: url("../images/back_vik.jpg");
+  background-size: 100%;
+  height: 30vh;
+  position: relative;
 }
-  
-nav{
-    height: 10vh;
-    width: 98vw;
+
+nav {
+  height: 10vh;
+  width: 98vw;
 }
-  
+
 #navId {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
-  
+
 #navId li {
-    list-style: none;
-    font-family: 'nordica_pnordicaclassicrgcond', 'Sans-serif', 'Arial';
-    padding: 1vw;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-}
-  
-h1{
-    font-family: 'viking-normalregular', 'Arial', 'Sans-serif';
-}
-  
-h2{
-    font-family: 'viking-normalregular', 'Arial', 'Sans-serif';
+  list-style: none;
+  font-family: "nordica_pnordicaclassicrgcond", "Sans-serif", "Arial";
+  padding: 1vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
-ul{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+h1 {
+  font-family: "viking-normalregular", "Arial", "Sans-serif";
 }
 
-#pics_email li{
-    display: flex;
-    flex-direction: column; 
-}
-  
-p{
-    font-family: 'nordica_plnordicaclassicrgext', 'Sans-serif', 'Arial';
+h2 {
+  font-family: "viking-normalregular", "Arial", "Sans-serif";
 }
 
-form{
-    width: 30vw;
-    margin: 1vw;
-    background: rgba(0, 0, 0, 0.2);
+ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
+#pics_email li {
+  display: flex;
+  flex-direction: column;
+}
 
-textarea, input{
-    width: 100%;
-    margin-bottom: 2vh;
-    box-sizing: border-box;
-    font-size: 1vw;
+p {
+  font-family: "nordica_plnordicaclassicrgext", "Sans-serif", "Arial";
 }
-  
-a{
-    text-decoration: none;
-    color:#ffffff;;
+
+form {
+  width: 30vw;
+  margin: 1vw;
+  background: rgba(0, 0, 0, 0.2);
 }
-  
+
+textarea,
+input {
+  width: 100%;
+  margin-bottom: 2vh;
+  box-sizing: border-box;
+  font-size: 1vw;
+}
+
+a {
+  text-decoration: none;
+  color: #ffffff;
+}
+
 a:link {
-    color: #ffffff;
+  color: #ffffff;
 }
-  
+
 a:visited {
 }
 
@@ -118,6 +117,3 @@ a:hover {
 
 a:active {
 }
-
-
-  
