--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,15 @@ p {
 }
 
 #intro_text {
-  max-width: 500px;
+  max-width: 90%;
+  align-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 4vw;
+}
+
+#main_text{
+  max-width: 40vw;
   align-content: center;
   margin-left: auto;
   margin-right: auto;
@@ -105,11 +113,6 @@ li {
 
 .countries {
   padding: 0.5em;
-}
-
-a {
-  text-decoration: none;
-  color: #ffffff;
 }
 
 a {
@@ -137,22 +140,6 @@ a:active {
   max-width: 300px;
 }
 
-#pics_email li {
-  display: flex;
-  flex-direction: column;
-}
-
-form {
-  background: rgba(0, 0, 0, 0.2);
-}
-
-textarea,
-input {
-  width: 100%;
-  margin-bottom: 2vh;
-  box-sizing: border-box;
-  font-size: 1em;
-}
 
 footer {
   position: relative;
