--- a/css/about_us.css
+++ b/css/about_us.css
@@ -92,6 +92,14 @@ p {
   font-family: "nordica_plnordicaclassicrgext", "Sans-serif", "Arial";
 }
 
+#intro_text {
+  max-width: 90%;
+  align-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 4vw;
+}
+
 form {
   width: 50vw;
   margin: 0.5vw;
