--- a/css/about_us.css
+++ b/css/about_us.css
@@ -59,14 +59,26 @@ nav {
 #navId li {
   list-style: none;
   font-family: "nordica_pnordicaclassicrgcond", "Sans-serif", "Arial";
-  padding: 1vw;
+  padding: 1vh;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
 }
 
+details {
+  font-family: "nordica_pnordicaclassicrgcond", "Sans-serif", "Arial";
+}
+
+details > summary::-webkit-details-marker {
+  display: none;
+}
+
 .countries {
   padding: 0.5em;
+}
+
+#unicodeLi {
+  padding: 1.4em;
 }
 
 h1 {
@@ -93,7 +105,7 @@ p {
 }
 
 #intro_text {
-  max-width: 90%;
+  max-width: 40vw;
   align-content: center;
   margin-left: auto;
   margin-right: auto;
@@ -146,6 +158,29 @@ details > summary::-webkit-details-marker {
 }
 
 @media only screen and (max-width: 600px) {
+  #navId {
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 0;
+    padding-top: 2vh;
+    padding-left: 0;
+
+    width: 100%;
+  }
+
+  #aboutUs {
+    margin-left: auto;
+  }
+
+  li {
+    padding: 0.5em;
+  }
+
+  #unicodeLi {
+    padding: 0.3em;
+  }
+
+
   #pics_email {
     display: flex;
     flex-direction: column;
