--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ header {
   position: relative;
   padding-bottom: 20vh;
 }
+
 nav {
   height: 10vh;
   width: 100%;
@@ -254,7 +255,6 @@ footer img{
     margin-top: 0;
     padding-top: 2vh;
     padding-left: 0;
-
     width: 100%;
   }
 
@@ -274,35 +274,60 @@ footer img{
     display: block;
   }
 
-  #main_text{
+  .main_text{
     max-width: 80vw;
     align-content: center;
-    margin-left: auto;
-    margin-right: auto;
     margin-top: 4vw;
   }
 
+  #intro_text{
+    max-width: 90vw;
+  }
+
   .historicalParagraph {
-    max-width: 200px;
-    padding-left: 0.5em;
+    padding-right: 40vw;
+    margin-right: 5vw;
+  }
+
+  .historicalParagraph::after{
+    width: 15px;
+    height: 15px;
+    left: 37vw;
+  }
+
+  aside img {
+    display: block;
   }
 
   img {
     display: none;
   }
 
-  #sweedishIntro {
-    display: none;
-  }
-
-  ul {
-    padding: 0;
+  details{
+    margin-top: 2vh;
   }
 
   h2 {
     align-self: center;
     text-align: center;
     font-size: 1.4em;
+  }
+
+  footer img{
+    display: block;
+
+  }
+  .aside_p{
+    margin-top: 3vh;
+    max-width: 100vw;
+  }
+
+  header {
+    background-image: url("../images/back.jpg"); 
+    background-size: 100vw 40vh;
+    height: 10vh;
+    position: relative;
+    padding-bottom: 20vh;
   }
 
 }
