--- a/css/about_us.css
+++ b/css/about_us.css
@@ -109,7 +109,9 @@ ul {
 }
 
 p {
-  font-family: "nordica_plnordicaclassicrgext", "Sans-serif", "Arial";
+  font-family: "Open Sans", "Sans-serif", "Arial";
+  font-size: 1em;
+  margin-bottom: 10vh;
 }
 
 #intro_text {
